src/static/css/style.css
@import url("https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,400;0,600;1,400;1,600&family=Nunito:wght@300;600&display=swap");
*,
::before,
::after {
  margin: 0;
  padding: 0;
  box-sizing: border-box;
}

ul,
ol {
  list-style: none;
}

:root {
  font-size: 112.5%;
  --primary: #e63946;
  --primary-dark: #b61625;
  --primary-light: #f2929a;
  --primary-c: white;
  --secondary: #429ea6;
  --secondary-dark: #296166;
  --secondary-light: #7cc4cb;
  --secondary-c: white;
  --header-padding: 1rem;
  --header-title: 2.25rem;
  --header-subtitle: 1.5rem;
}

h1,
h2,
h3,
h4,
h5,
h6 {
  font-family: "Nunito", serif;
  font-weight: 600;
}

body {
  font-family: "Open Sans", sans-serif;
  display: flex;
  flex-direction: column;
  min-height: 100vh;
  background: #fafafa;
}

body > main {
  flex: 1;
}

header {
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: center;
  width: 100%;
  background: var(--primary);
  color: var(--primary-c);
  padding: var(--header-padding);
  text-align: center;
}
header > h1 {
  font-size: var(--header-title);
}
header > h2 {
  font-size: var(--header-subtitle);
}

nav {
  display: flex;
  align-items: center;
  justify-content: center;
  background: var(--primary-dark);
  color: white;
  padding: calc(var(--header-padding) / 2);
}

nav a {
  color: inherit;
}
nav > ul > li {
  display: inline-block;
  margin: 0.5rem;
}

.flow-y > *:not(:last-child) {
  margin-bottom: var(--flow-y, 0.5rem);
}

img.avatar {
  width: 10rem;
  height: 10rem;
  border-radius: 9999px;
  border: 2px solid var(--secondary-dark);
}

section.me-section {
  padding: 1rem;
  background: var(--secondary);
  color: var(--secondary-c);
  font-size: 1rem;
}

section.me-section > .container {
  display: flex;
  flex-direction: column;
}

section.me-section > .container > .avatar {
  align-self: center;
}

footer {
  background: var(--secondary-dark);
  color: white;
  padding: 1.25rem;
}

footer a {
  color: inherit;
}

h1#post-title {
  text-align: center;
  margin: 1rem;
  color: black;
  text-shadow: 0 2px 1px var(--primary), 0 4px 1px var(--secondary-light);
}

div.markdown {
  padding: 1rem;
  display: flex;
  flex-direction: column;
  font-size: 1rem;
  line-height: calc(1.468em + 3px);
  word-wrap: break-word;
  word-break: break-word;
  -ms-word-wrap: break-word;
  -ms-word-wrap: break-word;
  -ms-hyphens: auto;
  -webkit-hyphens: auto;
  hyphens: auto;
}

div.markdown p {
  margin-bottom: 0.5em;
}

div.markdown hr {
  width: 50%;
  margin: 1em auto;
  color: var(--secondary);
}

div.markdown ul,
div.markdown ol,
div.markdown li {
  all: revert;
  padding: 0;
  margin: 0;
  list-style-position: inside;
}

div.markdown ul,
div.markdown ol {
  margin-top: 0.75em;
  margin-bottom: 0.75em;
}

/*? Handling nested lists */
div.markdown ul > li ul,
div.markdown ol > li ul,
div.markdown ul > li ol,
div.markdown ol > li ol {
  padding-left: 1em;
  margin-top: 0;
  margin-bottom: 0;
}

div.markdown h1,
div.markdown h2,
div.markdown h3,
div.markdown h4,
div.markdown h5,
div.markdown h6 {
  margin-bottom: 0.75em;
}

div.markdown pre {
  background: #333;
  color: white;
  border-radius: 6px;
  padding: 0.5em;
  overflow-x: scroll;
}

div.markdown code {
  overflow-x: scroll;
  margin-right: 0.5em;
}

section.post-list {
  margin: 1rem;
}

h3#post-list {
  font-size: 2rem;
}
section.post-list ul {
  /* display: flex;
  align-items: center;
  justify-content: center;
  flex-direction: column; */
  margin-top: 1rem;
  list-style: none outside;
}

section.post-list ul li {
  display: flex;
  flex-direction: column;
  padding: 1rem 0.75rem;
  box-shadow: 0 2px 6px hsla(0, 0%, 25%, 0.5);
  justify-content: center;
  border-radius: 2px;
}

section.post-list ul li .info {
  display: flex;
  flex-direction: row;
  align-items: center;
  justify-content: space-between;
}

.inherit {
  color: inherit;
}

.spacer {
  flex: 1;
}

.button {
  color: var(--primary-c);
  background: var(--primary);
  text-decoration: none;
  cursor: pointer;
  border: none;
  border-radius: 6px;
  padding: 0.5rem 1rem;
  font-size: 0.85rem;
  box-shadow: 0 3px 4px hsla(0, 0%, 25%, 0.5);
  transition: background-color 0.15s ease-out;
}

.button:hover {
  background-color: var(--primary-dark);
}

